refactor: create authorization in RDBMS exporter
This commit changes the structure of authorization creation in the RDBMS exporter. This now matches the structure of the
 exported records.